Updated demo presentation